import React from 'react';
import renderer from 'react-test-renderer';
import Mistakes from "./mistakes";

describe(`should Mistakes render correctly`, () => {
  it(`with zero count`, () => {
    const tree = renderer
      .create(<Mistakes count={0} />)
      .toJSON();

    expect(tree).toMatchSnapshot();
  });

  it(`with one count`, () => {
    const tree = renderer
      .create(<Mistakes count={1} />)
      .toJSON();

    expect(tree).toMatchSnapshot();
  });
});
