// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should Mistakes render correctly with one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`should Mistakes render correctly with zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
